--- a/mobile.css
+++ b/mobile.css
@@ -111,4 +111,39 @@ main{
     margin: 1rem;
 }
 
+
+.click-me{
+    height: 20px; 
+    width: 20px; 
+    border-radius: 50%;
+    /* border: 1px solid var(--theme2-light-grayish-blue); */
+    margin-left: 1rem;
+}
+
+.click-me-color{
+    background-image: linear-gradient(hsl(192, 100%, 67%) , hsl(280, 87%, 65%));
+}
+
+.click-btn{
+    height: 20px; 
+    width: 20px; 
+    border-radius: 50%;
+    border: 1px solid var(--theme2-light-grayish-blue);
+    /* margin-left: 30px; */
+    /* border: none; */
+    /* height: 20px;  */
+    /* width: 20px;  */
+    background-color: transparent;
+}
+
+.click-btn-bg{
+    background-image: url(./images/icon-check.svg);
+    background-repeat: no-repeat;
+    background-position: 3.5px;
+    /* width: 20px; */
+    /* height: 20px; */
+    /* background-color: red; */
+}
+
+
 }
